--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         }
     ],
     "require": {
+        "hyva-themes/module-magento2-admin": "^1.1.20",
         "sansec/composer-integrity-plugin": "^0.1.4"
     },
     "autoload": {
