--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
         "hyva-themes/module-magento2-admin": "^1.1.20",
         "sansec/composer-integrity-plugin": "^0.2.0"
     },
+    "suggest": {
+        "ethanyehuda/magento2-cronjobmanager": "A module for managing scheduled cron jobs from magento's admin panel"  
+    },
     "autoload": {
         "psr-4": {
             "Element119\\SansecComposerIntegrityChecker\\": ""
